<resources>
    <string name="app_name">Agenda</string>
    <string name="txt_dig_nome">Digite seu nome aqui</string>
    <string name="txt_dig_numero">(00) 00000-0000</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_tel">Telefone</string>
    <string name="txt_cod">Codigo</string>
    <string name="txt_gravar">GRAVAR</string>
    <string name="txt_deletar">DELETAR</string>
    <string name="txt_editar">EDITAR</string>
    <string name="txt_consutar">CONSULTAR</string>
    <string name="txt_fechar">FECHAR</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="txt_anterior">ANTERIOR</string>
    <string name="txt_proximo">PROXIMO</string>
    <string name="txt_voltar">VOLTAR</string>
</resources>